--- a/index.qmd
+++ b/index.qmd
@@ -4,6 +4,8 @@ image: profile.jpeg
 toc: false
 about:
   template: trestles
+  image-width: 20em
+  image-shape: round
   links:
     - icon: linkedin
       text: LinkedIn
