--- a/projects.qmd
+++ b/projects.qmd
@@ -1,6 +1,11 @@
 ---
 title: "Projects"
-page-layout: article
+listing:
+  contents: contents/projects
+  sort: "date"
+  type: grid
+  categories: true
+  sort-ui: false
+  filter-ui: false
+page-layout: full
 ---
-
-This page contains my projects.
