--- a/contents/projects/02_survey_in_llm/index.qmd
+++ b/contents/projects/02_survey_in_llm/index.qmd
@@ -5,6 +5,4 @@ categories: [PEV, Survey, LLM]
 image: "banner.png"
 ---
 
-## Abstract
-
-Blah...
+Attempt to utilize LLM on the Smart Charging willingness survey and compare with human results.
