--- a/contents/projects/03_ai_for_bot_detection/index.qmd
+++ b/contents/projects/03_ai_for_bot_detection/index.qmd
@@ -5,4 +5,16 @@ categories: [Coding]
 image: "banner.png"
 ---
 
-Attempt to use LLM to distinguish between humans responses and bot responses.
+## Research Question
+
+Can we use GPT to validate if the survey is done by human or AI?
+
+## Initial Ideas
+
+-   Attempt to use LLM to distinguish between humans responses and bot responses.
+
+-   This survey can be as generic as possible, for example, the apple conjoint surveys.
+
+-   We perform the survey on human participants and via LLM. Then the results will be embedded by GPT models to generate corresponding digital values.
+
+-   Once we have the embedded models for both human and LLM respondents, we can use them as templates to check for our public survey results such as Mechanical Turk.
