--- a/contents/projects/references.bib
+++ b/contents/projects/references.bib
@@ -135,3 +135,85 @@
 	date = {20},
 	url = {https://www.youtube.com/watch?v=nibU1Iq6g3Y}
 }
+
+@misc{EIADataBrowser2023,
+  author = {{EIA}},
+  title = {Electricity Data Browser},
+  year = {2023},
+  url = {https://www.eia.gov/electricity/data/browser/},
+  note = {Accessed: 2023-09-21}
+}
+
+@misc{EIAOpenData2023,
+  author = {{EIA Open Data}},
+  title = {EIA Open Data},
+  year = {2023},
+  url = {https://www.eia.gov/opendata/},
+  note = {Accessed: 2023-09-21}
+}
+
+@misc{EERELibrary2023,
+  author = {{EERE Library}},
+  title = {EERE Digital Library},
+  year = {2023},
+  url = {https://www1.eere.energy.gov/library/default.aspx},
+  note = {Accessed: 2023-09-21}
+}
+
+@misc{CleanCitiesCoalition2023,
+  author = {{Clean Cities Coalition}},
+  title = {Clean Cities Coalition Network - Projects \& Funding},
+  year = {2023},
+  url = {https://cleancities.energy.gov/annual-project-funding/},
+  note = {Accessed: 2023-09-21}
+}
+
+@misc{EEREAFDC2023,
+  author = {{AFDC}},
+  title = {Alternative Fuels Data Center Home Page},
+  year = {2023},
+  url = {https://afdc.energy.gov/},
+  note = {Accessed: 2023-09-21}
+}
+
+@misc{IRENA,
+  author = {{IRENA}},
+  title = {IRENA Statistics Data},
+  year = {2023},
+  url = {https://www.irena.org/Data},
+  note = {Accessed: 2023-10-27}
+}
+
+@misc{OurWorldinData,
+  author = {{OurWorldinData}},
+  title = {Energy Data Explorer},
+  year = {2023},
+  url = {https://ourworldindata.org/explorers/energy},
+  note = {Accessed: 2023-10-27}
+}
+
+@misc{DSIRE,
+  author = {{DSIRE}},
+  title = {Clean Energy Programs},
+  year = {2023},
+  url = {https://programs.dsireusa.org/system/program},
+  note = {Accessed: 2023-10-27}
+}
+
+@misc{IEA,
+  author = {{IEA}},
+  title = {Energy Technology RD&D Budgets},
+  year = {2023},
+  url = {https://www.iea.org/data-and-statistics/data-product/energy-technology-rd-and-d-budget-database-2#},
+  note = {Accessed: 2023-10-27}
+}
+
+@misc{carbon-f2023,
+	author = {{WEForum}},
+	title = {Carbon-free electricity hits a milestone in the US - but more work is needed},
+	year = {2023},
+	month = {03},
+	date = {2023-03-09},
+	url = {https://www.weforum.org/agenda/2023/03/us-electricity-energy-carbon-renewables/},
+	langid = {en}
+}
