--- a/contents/blogs/01_how_to_make_a_personal_website/index.qmd
+++ b/contents/blogs/01_how_to_make_a_personal_website/index.qmd
@@ -52,7 +52,7 @@ You can use [Netlify](https://www.netlify.com) or [Namecheap](https://www.namech
 ![**Figure 1**: *Both my personal domain and netlify-assigned domain are functioning. Plus, there is a re-direction from www by default.*](figs/01_my_domain.jpg){width="700"}
 :::
 
-> Hint: If you want to save time, I recommend that you buy domain on [Netlify](https://www.netlify.com) so that you won't need to bother dealing with DNS assignment. However, [Namecheap](https://www.namecheap.com) gives you full service of domain management and DNS customization, and, as it's name indicates, it sells domains a little cheaper.
+> Hint: If you want to save time, I recommend that you buy domain on [Netlify](https://www.netlify.com) so that you won't need to bother dealing with DNS assignment. However, [Namecheap](https://www.namecheap.com) gives you full service of domain management and DNS customization, and, as its name indicates, it sells domains a little cheaper.
 
 ## Step 2 - Website Project
 
