--- a/contents/projects/03_pev_smart_charging/index.qmd
+++ b/contents/projects/03_pev_smart_charging/index.qmd
@@ -1,16 +1,11 @@
 ---
 title: "PEV Smart Charging"
+subtitle: "Quantifying the benefits and constraints of PEV smart charging and V2G adoption."
 date: "Sept 07, 2023"
 image: "banner.png"
 categories: [Smart Charging, Conjoint Survey]
 bibliography: ../references.bib
 ---
-
-## Research Question
-
-Quantifying the benefits and constraints of PEV smart charging and V2G adoption.
-
-## Project Links
 
 <a href="https://pev.pingfanhu.com" class="btn btn-primary" role="button"> Access the Project </a> <a href="https://jhelvy.github.io/smartcharging/" class="btn btn-info" role="button"> Access the Showcase </a>
 
