--- a/contents/projects/04_sim_with_grid/index.qmd
+++ b/contents/projects/04_sim_with_grid/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "(Expected) Smart Charging Simulation with the Grid"
-subtitle: "Simulate the PEV smart charging adoption with the grid to reveal the theoretical results."
+subtitle: "Simulate the PEV Smart Charging adoption with the grid to reveal the theoretical results."
 date: "Jul, 2024"
 image: "banner.png"
 categories: [Smart Charging, Simulation]
