--- a/contents/projects/05_survey_in_llm/index.qmd
+++ b/contents/projects/05_survey_in_llm/index.qmd
@@ -1,8 +1,8 @@
 ---
 title: "(Expected) Utilization of LLM on Surveys"
-subtitle: "Attempt to utilize LLM on the Smart Charging willingness survey and compare with human results."
+subtitle: "Attempt to utilize LLM on the Smart Charging survey and compare with human results."
 date: "Jan, 2025"
 image: "banner.png"
-categories: [LLM, Conjoint Survey]
+categories: [Smart Charging, LLM, Conjoint]
 bibliography: ../references.bib
 ---
