--- a/contents/projects/06_ai_for_bot_detection/index.qmd
+++ b/contents/projects/06_ai_for_bot_detection/index.qmd
@@ -3,7 +3,7 @@ title: "(Expected) Using AI to Detect Bots in Surveys"
 subtitle: "Can we use GPT to validate if the survey is done by human or AI?"
 date: "Jul, 2025"
 image: "banner.png"
-categories: [LLM, Conjoint Survey]
+categories: [LLM, Conjoint]
 bibliography: ../references.bib
 ---
 
