--- a/contents/blogs/01_how_to_make_a_personal_website/index.qmd
+++ b/contents/blogs/01_how_to_make_a_personal_website/index.qmd
@@ -7,11 +7,11 @@ image: "banner.png"
 
 ## Useful Links
 
-|             |                                                                                                                                                                                                                                                                                                                                                                                                                      |
-|-------------|----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Software    | <a href="https://desktop.github.com" class="btn btn-success btn-sm" role="button"> GitHub Desktop </a> <a href="https://www.r-project.org" class="btn btn-success btn-sm" role="button"> R Language </a> <a href="https://www.rstudio.com/categories/rstudio-ide/" class="btn btn-success btn-sm" role="button"> RStudio </a> <a href="https://quarto.org" class="btn btn-success btn-sm" role="button"> Quarto </a> |
-| Platforms   | <a href="https://github.com" class="btn btn-info btn-sm" role="button"> GitHub (Online Repo) </a> <a href="https://www.namecheap.com" class="btn btn-info btn-sm" role="button"> Namecheap (Buy Domain) </a> <a href="https://www.netlify.com" class="btn btn-info btn-sm" role="button"> Netlify (Server) </a>                                                                                                      |
-| GitHub Repo | <a href="https://github.com/pingfan0727/My-Website" class="btn btn-primary btn-sm" role="button"> GitHub Repo of My Website </a>                                                                                                                                                                                                                                                                                     |
+|           |                                                                                                                                                                                                                                                                                                                                                                                                             |
+|-----------|-------------------------------------------------------------|
+| My Repo   | <a href="https://github.com/pingfan0727/My-Website" class="btn btn-primary btn-sm" role="button"> GitHub Repo of My Website </a>                                                                                                                                                                                                                                                                            |
+| Software  | <a href="https://desktop.github.com" class="btn btn-success btn-sm" role="button"> GitHub Desktop </a> <a href="https://www.r-project.org" class="btn btn-success btn-sm" role="button"> R </a> <a href="https://www.rstudio.com/categories/rstudio-ide/" class="btn btn-success btn-sm" role="button"> RStudio </a> <a href="https://quarto.org" class="btn btn-success btn-sm" role="button"> Quarto </a> |
+| Platforms | <a href="https://github.com" class="btn btn-info btn-sm" role="button"> GitHub (Repo) </a> <a href="https://www.namecheap.com" class="btn btn-info btn-sm" role="button"> Namecheap (Domain) </a> <a href="https://www.netlify.com" class="btn btn-info btn-sm" role="button"> Netlify (Server) </a>                                                                                                        |
 
 ## Abstract
 
