--- a/projects/05_survey_in_llm/index.qmd
+++ b/projects/05_survey_in_llm/index.qmd
@@ -3,4 +3,5 @@ title: "(Expected) Utilization of LLM on Surveys"
 subtitle: "Attempt to utilize LLM on the Smart Charging survey and compare with human results."
 date: "Jan, 2025"
 categories: [Smart Charging, LLM, Conjoint]
+bibliography: ../references.bib
 ---
